fix(keeper): add support for branch 3.3.8 and improve taosadapter tag determination

--- a/.github/workflows/taoskeeper-test.yml
+++ b/.github/workflows/taoskeeper-test.yml
@@ -1,4 +1,4 @@
-name: taosKeeper Build
+name: taosKeeper Test
 
 on:
   pull_request:
@@ -6,6 +6,7 @@ on:
       - "main"
       - "3.0"
       - "3.3.6"
+      - "3.3.8"
     paths:
       - "tools/keeper/**"
       - ".github/workflows/taoskeeper-build.yml"
@@ -14,6 +15,7 @@ on:
       - "main"
       - "3.0"
       - "3.3.6"
+      - "3.3.8"
     paths:
       - "tools/keeper/**"
       - ".github/workflows/taoskeeper-build.yml"
@@ -42,9 +44,24 @@ jobs:
         with:
           cmakeVersion: 3.31.6
 
+      - name: Determine taosadapter git tag
+        id: taosadapter_tag
+        run: |
+          branch="${{ github.base_ref }}"
+          if [ -z "$branch" ]; then
+            branch="${{ github.ref_name }}"
+          fi
+          case "$branch" in
+            3.0) tag="3.0" ;;
+            3.3.6) tag="3.3.6" ;;
+            3.3.8) tag="3.3.8" ;;
+            *) tag="main" ;;
+          esac
+          echo "value=$tag" >> "$GITHUB_OUTPUT"
+
       - name: Install TDengine
         env:
-          TAOSADAPTER_FLAG: ${{ github.base_ref == '3.0' && '-DTAOSADAPTER_GIT_TAG:STRING=3.0' || '' }}
+          TAOSADAPTER_FLAG: -DTAOSADAPTER_GIT_TAG:STRING=${{ steps.taosadapter_tag.outputs.value }}
         run: |
           mkdir debug
           cd debug
