--- a/source/dnode/mnode/impl/test/sdb/CMakeLists.txt
+++ b/source/dnode/mnode/impl/test/sdb/CMakeLists.txt
@@ -2,6 +2,7 @@ aux_source_directory(. MNODE_SDB_TEST_SRC)
 add_executable(sdbTest ${MNODE_SDB_TEST_SRC})
 target_link_libraries(
     sdbTest
+    PUBLIC mgmt_mnode
     PUBLIC sut
     PUBLIC sdb
 )
