feat(stream): support true for row count limit

--- a/source/util/test/errorCodeTable.ini
+++ b/source/util/test/errorCodeTable.ini
@@ -595,6 +595,7 @@ TSDB_CODE_PAR_OPTION_VALUE_TOO_LONG                 = 0x800026A0
 TSDB_CODE_PAR_OPTION_VALUE_TOO_SHORT                = 0x800026A1
 TSDB_CODE_PAR_OPTION_VALUE_TOO_BIG                  = 0x800026A2
 TSDB_CODE_PAR_OPTION_VALUE_TOO_SMALL                = 0x800026A3
+TSDB_CODE_PAR_INVALID_TRUE_FOR_COUNT                = 0x800026AB
 TSDB_CODE_PAR_INTERNAL_ERROR                        = 0x800026FF
 TSDB_CODE_PLAN_INTERNAL_ERROR                       = 0x80002700
 TSDB_CODE_PLAN_EXPECTED_TS_EQUAL                    = 0x80002701
