enh: [6690002267] Optimize virtual table query with plenty of columns.

--- a/source/util/test/errorCodeTable.ini
+++ b/source/util/test/errorCodeTable.ini
@@ -371,6 +371,7 @@ TSDB_CODE_QRY_INVALID_WINDOW_CONDITION              = 0x80000712
 TSDB_CODE_QRY_EXECUTOR_INTERNAL_ERROR               = 0x80000732
 TSDB_CODE_QRY_EXECUTOR_INTERNAL_ERROR               = 0x80000732
 TSDB_CODE_QRY_INVALID_JOIN_CONDITION                = 0x80000733
+TSDB_CODE_QRY_VSTB_SLOTID_NOT_FOUND                 = 0x80000741
 TSDB_CODE_GRANT_EXPIRED                             = 0x80000800
 TSDB_CODE_GRANT_DNODE_LIMITED                       = 0x80000801
 TSDB_CODE_GRANT_ACCT_LIMITED                        = 0x80000802
