--- a/utils/test/c/CMakeLists.txt
+++ b/utils/test/c/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(tmq_get_meta_json tmq_get_meta_json.c)
 add_executable(tmq_td33798 tmq_td33798.c)
 add_executable(tmq_td37265 tmq_td37265.c)
 add_executable(tmq_ts7402 tmq_ts7402.c)
+add_executable(tmq_token tmq_token.c)
 add_executable(tmq_alter_tag tmq_alter_tag.c)
 add_executable(tmq_poll_test tmq_poll_test.c)
 add_executable(tmq_write_raw_test tmq_write_raw_test.c)
@@ -71,6 +72,14 @@ target_link_libraries(
 
 target_link_libraries(
     tmq_sim
+    PUBLIC ${TAOS_NATIVE_LIB}
+    PUBLIC util
+    PUBLIC common
+    PUBLIC os
+)
+
+target_link_libraries(
+    tmq_token
     PUBLIC ${TAOS_NATIVE_LIB}
     PUBLIC util
     PUBLIC common
