--- a/.github/workflows/new-framework-test.yml
+++ b/.github/workflows/new-framework-test.yml
@@ -46,6 +46,7 @@ concurrency:
 
 jobs:
   test-new-cases:
+    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && !contains(github.event.pull_request.title, '[manual-only]'))
     uses: taosdata/.github/.github/workflows/new-framework-test.yml@main
     with:
       tdinternal: false
