enh: add support for IPv6 dual-stack in transport layer and related tests (#34370)

--- a/source/libs/transport/CMakeLists.txt
+++ b/source/libs/transport/CMakeLists.txt
@@ -45,3 +45,8 @@ if(${BUILD_WITH_UV_TRANS})
     add_definitions(-DUSE_UV)
   endif(${BUILD_WITH_UV})
 endif(${BUILD_WITH_UV_TRANS})
+
+
+# if(${BUILD_TEST})
+#     add_subdirectory(test)
+# endif(${BUILD_TEST})
