--- a/.github/workflows/taoskeeper-audit.yml
+++ b/.github/workflows/taoskeeper-audit.yml
@@ -8,6 +8,11 @@ on:
       - "tools/keeper/**"
       - ".github/workflows/taoskeeper*.yml"
   push:
+    branches:
+      - "main"
+      - "3.0"
+      - "3.3.6"
+      - "3.3.8"
     paths:
       - "tools/keeper/**"
       - ".github/workflows/taoskeeper*.yml"
@@ -32,13 +37,10 @@ jobs:
       - name: Install go-licenses
         run: go install github.com/google/go-licenses/v2@latest
 
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
-        timeout-minutes: 300
-
       - name: License Check
         working-directory: tools/keeper
         run: |
-          go-licenses check ./... --allowed_licenses="MIT,Apache-2.0,BSD-2-Clause,BSD-3-Clause,ISC"
+          go-licenses check ./... \
+            --allowed_licenses="MIT,Apache-2.0,BSD-2-Clause,BSD-3-Clause,ISC,MPL-2.0,Zlib" \
             --ignore github.com/taosdata/taoskeeper \
             --ignore github.com/taosdata/go-utils
