feat: update test workflows to use environment variables for credentials

--- a/.github/workflows/taoskeeper-test-enterprise.yml
+++ b/.github/workflows/taoskeeper-test-enterprise.yml
@@ -67,6 +67,9 @@ jobs:
 
       - name: Run tests with coverage
         working-directory: tools/keeper
+        env:
+          TEST_USERNAME: ${{ secrets.KEEPER_TEST_USERNAME }}
+          TEST_PASSWORD: ${{ secrets.KEEPER_TEST_PASSWORD }}
         run: |
           go mod tidy
           sudo TEST_ENTERPRISE=true go test -v -ldflags="-X 'github.com/taosdata/taoskeeper/version.IsEnterprise=true'" -coverpkg=./... -coverprofile=coverage.out ./...
