--- a/.github/workflows/taoskeeper-test.yml
+++ b/.github/workflows/taoskeeper-test.yml
@@ -83,6 +83,9 @@ jobs:
 
       - name: Run tests with coverage
         working-directory: tools/keeper
+        env:
+          TEST_USERNAME: ${{ secrets.KEEPER_TEST_USERNAME }}
+          TEST_PASSWORD: ${{ secrets.KEEPER_TEST_PASSWORD }}
         run: |
           go mod tidy
           sudo go test -v -ldflags="-X 'github.com/taosdata/taoskeeper/version.IsEnterprise=true'" -coverpkg=./... -coverprofile=coverage.out ./...
