chore: setup tmate

--- a/.github/workflows/taoskeeper-test-enterprise.yml
+++ b/.github/workflows/taoskeeper-test-enterprise.yml
@@ -65,6 +65,10 @@ jobs:
           taosd &
           taosadapter &
 
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+        timeout-minutes: 300
+
       - name: Run tests with coverage
         working-directory: tools/keeper
         env:
