--- a/tests/ci/dockerfile_ci
+++ b/tests/ci/dockerfile_ci
@@ -1,50 +1,41 @@
-# Stage 1: Build Stage
-FROM python:3.9 AS builder
+FROM python:3.9.25 AS builder
 
-# 设置工作目录
 WORKDIR /home
 
-# 定义变量
-ARG INSTALLERS_DIR=installers
+# 配置 apt 源
+RUN echo "deb http://deb.debian.org/debian bookworm main" > /etc/apt/sources.list \
+    && echo "deb http://deb.debian.org/debian-security bookworm-security main" >> /etc/apt/sources.list \
+    && echo "deb http://deb.debian.org/debian bookworm-updates main" >> /etc/apt/sources.list
 
-# 复制必要的文件
+# 复制必要文件
 COPY requirements.txt /home/
-COPY sources.list /etc/apt/
 COPY id_ecdsa /root/.ssh/id_ecdsa
 COPY id_ecdsa.pub /root/.ssh/id_ecdsa.pub
 COPY id_ecdsa.pub /root/.ssh/authorized_keys
 COPY .gitconfig /root/.gitconfig
 
-RUN rm -rf /etc/apt/sources.list.d/*
-
-
-# 安装基础依赖（合并命令，减少镜像层）
-RUN apt-key adv --keyserver hkp://pgpkeys.eu --recv-keys 3B4FE6ACC0B21F32 \
-    && apt-key adv --keyserver hkp://pgpkeys.eu --recv-keys 871920D1991BC93C \
-    && apt-get update \
+# 安装依赖
+RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-        locales psmisc sudo tree libgeos-dev libgflags2.2 libgflags-dev ruby-full \
-        libgeos-dev libgoogle-glog-dev libsnappy-dev liblzma-dev libz-dev \
-        libjansson-dev  zlib1g pkg-config build-essential valgrind rsync vim \
+        locales psmisc sudo tree libgeos-dev libgflags-dev ruby-full \
+        libgoogle-glog-dev libsnappy-dev liblzma-dev libz-dev \
+        libjansson-dev zlib1g pkg-config build-essential valgrind rsync vim \
         libjemalloc-dev openssh-server screen sshpass net-tools dirmngr gnupg \
         apt-transport-https ca-certificates software-properties-common iputils-ping \
-        r-base r-base-dev clang-tools-16 wget lcov \
-        && wget https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb \
-        && dpkg -i packages-microsoft-prod.deb \
-        && rm packages-microsoft-prod.deb \
-        && apt-get update \
-        && apt-get install -y  dotnet-sdk-6.0 \
+        r-base r-base-dev clang-tools-16 wget lcov groff \
+    && wget https://dot.net/v1/dotnet-install.sh -O dotnet-install.sh \
+    && chmod +x dotnet-install.sh \
+    && ./dotnet-install.sh --version 6.0.100 --install-dir /usr/share/dotnet \
+    && ln -s /usr/share/dotnet/dotnet /usr/bin/dotnet \
     && sed -i 's/# en_US.UTF-8/en_US.UTF-8/' /etc/locale.gen \
     && locale-gen \
-    && rm -rf /var/lib/apt/lists/* 
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 # 配置 pip
 RUN pip3 config set global.index-url http://admin:123456@192.168.0.212:3141/admin/dev/+simple/ \
     && pip3 config set global.trusted-host 192.168.0.212 \
-    && pip3 install --no-cache-dir -r /home/requirements.txt \
-    && pip3 install --no-cache-dir \
-        taospy==2.8.8 taos-ws-py==0.6.5 pandas psutil codecov fabric2 requests faker simplejson toml \
-        pexpect tzlocal distro decorator loguru hyperloglog websockets 
+    && pip3 install --no-cache-dir -r /home/requirements.txt
 
 # 安装 Go、JDK、Maven、Node.js（优化解压路径）
 ADD go1.23.4.linux-amd64.tar.gz /usr/local/
@@ -55,7 +46,7 @@ ADD cmake-3.21.5-linux-x86_64.tar.gz /usr/local/
 
 ENV RUSTUP_UPDATE_ROOT="https://rsproxy.cn/rustup"
 ENV RUSTUP_DIST_SERVER="https://rsproxy.cn"
-ENV RUST_VERSION=1.87.0
+ENV RUST_VERSION=1.90.0
 
 # 安装 Rust（优化安装过程）
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --verbose --profile minimal --component clippy,rustfmt --default-toolchain $RUST_VERSION
@@ -84,7 +75,9 @@ RUN mkdir -p /root/.ssh \
     && chmod 700 /root/.ssh \
     && echo "StrictHostKeyChecking no" >> /etc/ssh/ssh_config \
     && chmod 600 /root/.ssh/id_ecdsa \
-    && chmod 600 /root/.ssh/authorized_keys
+    && chmod 600 /root/.ssh/authorized_keys \
+    # for taosadapter start 
+    && mkdir -p /etc/taos
 
 RUN sh -c "rm -f /etc/localtime;ln -s /usr/share/zoneinfo/Asia/Shanghai /etc/localtime;echo \"Asia/Shanghai\" >/etc/timezone"
 
@@ -92,3 +85,4 @@ RUN sh -c "rm -f /etc/localtime;ln -s /usr/share/zoneinfo/Asia/Shanghai /etc/loc
 # COPY TDinternal /home/TDinternal
 COPY setup.sh /home/setup.sh
 RUN  chmod +x /home/setup.sh
+COPY TDinternal /home/TDinternal
