--- a/.github/workflows/taoskeeper-test-enterprise.yml
+++ b/.github/workflows/taoskeeper-test-enterprise.yml
@@ -65,18 +65,15 @@ jobs:
           taosd &
           taosadapter &
 
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
-        timeout-minutes: 300
-
       - name: Run tests with coverage
         working-directory: tools/keeper
-        env:
-          TEST_USERNAME: ${{ secrets.KEEPER_TEST_USERNAME }}
-          TEST_PASSWORD: ${{ secrets.KEEPER_TEST_PASSWORD }}
         run: |
           go mod tidy
-          sudo TEST_ENTERPRISE=true go test -v -ldflags="-X 'github.com/taosdata/taoskeeper/version.IsEnterprise=true'" -coverpkg=./... -coverprofile=coverage.out ./...
+          sudo TEST_ENTERPRISE=true \
+            TEST_USERNAME=${{ secrets.KEEPER_TEST_USERNAME }} \
+            TEST_PASSWORD=${{ secrets.KEEPER_TEST_PASSWORD }} \
+            go test -v -ldflags="-X 'github.com/taosdata/taoskeeper/version.IsEnterprise=true'" \
+            -coverpkg=./... -coverprofile=coverage.out ./...
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
