fix: update workflow reference to correct branch for new framework test

--- a/.github/workflows/new-framework-test.yml
+++ b/.github/workflows/new-framework-test.yml
@@ -48,7 +48,7 @@ concurrency:
 jobs:
   test-new-cases:
     if: github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && !contains(github.event.pull_request.title, '[manual-only]'))
-    uses: taosdata/.github/.github/workflows/new-framework-test.yml@fix/clean-git-ref-lock-1
+    uses: taosdata/.github/.github/workflows/new-framework-test.yml@fix/clean-git-locks
     with:
       tdinternal: false
       specified_source_branch: ${{ github.event_name == 'pull_request' && 'unavailable' || inputs.specified_source_branch }}
