feat(service): add OOMScoreAdjust to taosd.service for better memory management

--- a/packaging/cfg/taosd.service
+++ b/packaging/cfg/taosd.service
@@ -17,6 +17,7 @@ Restart=always
 StartLimitBurst=3
 StartLimitInterval=900s
 EnvironmentFile=-/etc/default/taosd
+OOMScoreAdjust=-100
 
 [Install]
 WantedBy=multi-user.target
