feat(tests): update test_scalar_sub4a1 to include additional table names and enable analyze queries

--- a/tests/ci/dockerfile_ci
+++ b/tests/ci/dockerfile_ci
@@ -15,7 +15,7 @@ COPY .gitconfig /root/.gitconfig
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
         locales psmisc sudo tree libgeos-dev libgflags-dev ruby-full \
-        libgoogle-glog-dev libsnappy-dev liblzma-dev libz-dev \
+        libgoogle-glog-dev libsnappy-dev liblzma-dev zlib1g-dev \
         libjansson-dev zlib1g pkg-config build-essential valgrind rsync vim \
         libjemalloc-dev openssh-server screen sshpass net-tools dirmngr gnupg \
         apt-transport-https ca-certificates software-properties-common iputils-ping \
