--- a/test/cases/05-VirtualTables/in/test_vstable_select_test_session.in
+++ b/test/cases/05-VirtualTables/in/test_vstable_select_test_session.in
@@ -12,3 +12,30 @@ select _wstart, _wend, first(*), last(*), count(*) from test_vtable_select.vtb_v
 select _wstart, _wend, first(u_tinyint_col), last(u_tinyint_col), count(u_tinyint_col) from test_vtable_select.vtb_virtual_stb session(ts, 4a) limit 100;
 select _wstart, _wend, first(u_tinyint_col), first(u_smallint_col), last(u_tinyint_col), last(u_smallint_col), count(u_tinyint_col) from test_vtable_select.vtb_virtual_stb session(ts, 4a) limit 100 ;
 select _wstart, _wend, first(u_tinyint_col), first(u_smallint_col), first(u_int_col), last(u_tinyint_col), last(u_smallint_col), last(u_int_col), count(u_tinyint_col) from test_vtable_select.vtb_virtual_stb session(ts, 4a) limit 100 ;
+
+select _wstart, _wend, first(*), last(*), count(*) from test_vtable_select.vtb_virtual_stb partition by tbname session(ts, 2a) order by _wstart limit 100 ;
+select _wstart, _wend, first(bool_col), last(bool_col), count(bool_col) from test_vtable_select.vtb_virtual_stb partition by tbname session(ts, 2a) order by _wstart limit 100 ;
+select _wstart, _wend, first(bool_col), first(u_tinyint_col), last(bool_col), last(u_tinyint_col), count(u_tinyint_col) from test_vtable_select.vtb_virtual_stb partition by tbname session(ts, 2a) order by _wstart limit 100;
+select _wstart, _wend, first(bool_col), first(u_tinyint_col), first(u_smallint_col), last(bool_col), last(u_tinyint_col), last(u_smallint_col), count(u_tinyint_col) from test_vtable_select.vtb_virtual_stb partition by tbname session(ts, 2a) order by _wstart limit 100 ;
+
+select _wstart, _wend, count(bool_col) from test_vtable_select.vtb_virtual_stb session(ts, 2a) limit 100 ;
+select _wstart, _wend, count(bool_col), avg(u_tinyint_col) from test_vtable_select.vtb_virtual_stb session(ts, 2a) limit 100 ;
+select _wstart, _wend, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col) from test_vtable_select.vtb_virtual_stb session(ts, 2a) limit 100 ;
+
+select _wstart, count(bool_col) from test_vtable_select.vtb_virtual_stb session(ts, 2a) limit 100 ;
+select _wstart, count(bool_col), avg(u_tinyint_col) from test_vtable_select.vtb_virtual_stb session(ts, 2a) limit 100 ;
+select _wstart, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col) from test_vtable_select.vtb_virtual_stb session(ts, 2a) limit 100 ;
+
+select _wend, count(bool_col) from test_vtable_select.vtb_virtual_stb session(ts, 2a) limit 100 ;
+select _wend, count(bool_col), avg(u_tinyint_col) from test_vtable_select.vtb_virtual_stb session(ts, 2a) limit 100 ;
+select _wend, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col) from test_vtable_select.vtb_virtual_stb session(ts, 2a) limit 100 ;
+
+select _wstart, _wduration, _wend, count(bool_col) from test_vtable_select.vtb_virtual_stb session(ts, 2a) limit 100 ;
+select _wstart, _wduration, _wend, count(bool_col), avg(u_tinyint_col) from test_vtable_select.vtb_virtual_stb session(ts, 2a) limit 100 ;
+select _wstart, _wduration, _wend, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col) from test_vtable_select.vtb_virtual_stb session(ts, 2a) limit 100 ;
+
+select _wduration, count(bool_col) from test_vtable_select.vtb_virtual_stb session(ts, 2a) limit 100 ;
+select _wduration, count(bool_col), avg(u_tinyint_col) from test_vtable_select.vtb_virtual_stb session(ts, 2a) limit 100 ;
+select _wduration, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col) from test_vtable_select.vtb_virtual_stb session(ts, 2a) limit 100 ;
+
+select _wstart, _wduration, _wend, count(bool_col), avg(u_tinyint_col), sum(u_smallint_col), max(u_int_col), min(int_col), round(stddev_pop(smallint_col)), round(avg(tinyint_col)) from test_vtable_select.vtb_virtual_stb session(ts, 2a);
